# sqlx

./: Cargo.toml
sqlx-bench/: Cargo.toml
sqlx-bench/benches/: wasm_querying.rs
sqlx-core/: Cargo.toml
sqlx-core/src/: arguments.rs  connection.rs  database.rs  error.rs  executor.rs  lib.rs  placeholders.rs  query.rs  query_as.rs  query_scalar.rs  transaction.rs
sqlx-core/src/ext/: async_stream.rs
sqlx-core/src/net/: mod.rs  socket.rs
sqlx-core/src/pool/: maybe.rs  mod.rs
sqlx-core/src/postgres/: copy.rs  mod.rs  transaction.rs  ws_listener.rs
sqlx-core/src/postgres/connection/: describe.rs  establish.rs  executor.rs  mod.rs  stream.rs
sqlx-core/src/postgres/options/: connect.rs  mod.rs  parse.rs
sqlx-macros/: Cargo.toml
sqlx-macros/src/: lib.rs
sqlx-macros/src/query/: mod.rs
sqlx-rt/: Cargo.toml
sqlx-rt/src/: lib.rs
sqlx-test/: Cargo.toml
sqlx-test/src/: lib.rs
sqlx-wasm-test/: Cargo.toml  README.md  setup.sql
sqlx-wasm-test/src/: deletes_bench.rs  inserts_bench.rs  lib.rs  pg_types_tests.rs  pg_types_tests_2.rs  pg_types_tests_3.rs  pg_types_tests_4.rs  pg_types_tests_bigdecimal.rs  pg_types_tests_bitvec.rs  pg_types_tests_chrono.rs  pg_types_tests_decimal.rs  pg_types_tests_interval.rs  pg_types_tests_ipnetwork.rs  pg_types_tests_json.rs  pg_types_tests_money.rs  pg_types_tests_range.rs  pg_types_tests_time.rs  pg_types_tests_uuid.rs  pg_wasm_tests.rs  selects_bench.rs  updates_bench.rs
src/: lib.rs
tests/postgres/: deletes_custom_bench.rs  inserts_custom_bench.rs  selects_custom_bench.rs  updates_custom_bench.rs
